SFUSA/force-app/main/default/objects/ContactUs_Setting__c/fields/EntitlementProcess__c.field-meta.xml
<CustomField>
        <fullName>EntitlementProcess__c</fullName>
        <label>EntitlementProcess</label>
        <length>35</length>
        <type>Text</type>
    </CustomField>