SFUSA/force-app/main/default/objects/ContactUs_Setting__c/fields/ReCaptchaRenderUrl__c.field-meta.xml
<CustomField>
        <fullName>ReCaptchaRenderUrl__c</fullName>
        <description>It contains url to render reCaptcha</description>
        <label>ReCaptchaRenderUrl</label>
        <type>Url</type>
    </CustomField>